--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 idna==2.10
 itsdangerous==1.1.0
+Jinja2==2.11.3
 MarkupSafe==1.1.1
 PyMySQL==1.0.2
 requests==2.25.1
