--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
+attrs==20.3.0
 certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 idna==2.10
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+packaging==20.9
+pluggy==0.13.1
+psycopg2==2.8.6
+py==1.10.0
 PyMySQL==1.0.2
+pyparsing==2.4.7
+pytest==6.2.2
 requests==2.25.1
+six==1.15.0
 SQLAlchemy==1.3.23
+SQLAlchemy-Utils==0.36.8
+toml==0.10.2
 urllib3==1.26.3
 Werkzeug==1.0.1
-
